--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.5"
 branches:
   only:
-  - travis_integration
+  - master
 install:
   - "pip install -r requirements.txt"
   - "bash git_init.sh"
