update docs to markdown

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,10 @@
+
+title: Slate theme
+description: Slate is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-slate
+
 collections:
   Python:
     output: true
