--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ title: Slate theme
 description: Slate is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 
 collections:
   Python:
