--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,8 @@
 
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: Fred Hutch Scientific Software
+description: Easybuild Easyconfigs for Scientific Software
 show_downloads: true
+logo: 
 google_analytics:
 theme: jekyll-theme-minimal
 
@@ -9,20 +10,18 @@ collections:
   Python:
     output: true
     permalink: /:collection/:path/
-    layout: page
+    layout: post
   R:
     output: true
     permalink: /:collection/:path/
-    layout: page
+    layout: post
   Dot:
     output: true
     permalink: /:collection/:path/
-    layout: page
+    layout: post
 
 # Reading Files
 include:
   - _layouts
   - assets
   - _pages
-
-theme: jekyll-theme-slate
