--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,28 +1,20 @@
-
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Fred Hutch Scientific Software
+logo: /assets/img/logo.png
+description: Fred Hutch Easybuild Easyconfigs for Scientific Software. 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
 
 collections:
-  Python:
-    output: true
-    permalink: /:collection/:path/
-    layout: page
   R:
     output: true
     permalink: /:collection/:path/
-    layout: page
+    layout: default 
+  Python:
+    output: true
+    permalink: /:collection/:path/
+    layout: default 
   Dot:
     output: true
     permalink: /:collection/:path/
-    layout: page
-
-# Reading Files
-include:
-  - _layouts
-  - assets
-  - _pages
-
-theme: jekyll-theme-slate
+    layout: default 
