convert docs to Jekyll

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ collections:
   R:
     output: true
     permalink: /:collection/:path/
-    layout: default 
+    layout: post 
   Python:
     output: true
     permalink: /:collection/:path/
