convert docs to Jekyll

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,9 +11,9 @@ collections:
   R:
     output: true
     layout: post 
+    permalink: /easybuild-life-sciences/:collection/:path/
   Python:
     output: true
-    permalink: /:collection/:path/
     layout: default 
   Dot:
     output: true
