convert to Jekyll

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ collections:
     output: true
     layout: post 
     permalink: /:collection/:path/
-  presentation:
+  release:
     output: true
     layout: post 
     permalink: /:collection/:path/
