--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -102,9 +102,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
+  provider               : # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-123256805-1
+    tracking_id          : 
 
 
 
