--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,9 @@ collections:
   announcements:
     output: true
     permalink: /:collection/:path/
+  tollchains:
+    output: true
+    permalink: /:collection/:path/
 
 
 
