--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -23,6 +23,8 @@ docs:
         url: /python/
       - title: "Python Bundles"
         url: /python-bundles/
+      - title: "Vendor Software"
+        url: /vendorsoftware/
       - title: "Toolchains"
         url: /toolchains/
       - title: "Dependency Graphs"
