--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,9 @@ collections:
   announcements:
     output: true
     permalink: /:collection/:path/
+  sw_inventory:
+    output: true
+    permalink: /:collection/:path/
 
 
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -236,6 +239,15 @@ defaults:
   - scope:
       path: ""
       type: python 
+    values:
+      layout: single
+      sidebar:
+        nav: "docs"
+
+  # _sw_inventory
+  - scope:
+      path: ""
+      type: sw_inventory 
     values:
       layout: single
       sidebar:
