quokka software list

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -41,5 +41,5 @@ docs:
     children:
       - title: "ermine"
         url: /ermine/
-      - title: "quoka"
+      - title: "quokka"
         url: /quoka/
