--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -11,14 +11,14 @@ docs:
         url: /
       - title: "Software Updates"
         url: /updates/
-      - title: "Harmony - Bio Software Inventory"
-        url: /bio-modules-24.04/
-      - title: "Harmony - Full Software Inventory"
-        url: /all-modules-24.04/
-      - title: "Bionic - Bio Software Inventory"
-        url: /bio-modules-18.04/
-      - title: "Bionic - Full Software Inventory"
-        url: /all-modules-18.04/
+      - title: "Chorus - Bio Software Inventory"
+        url: /sw_inventory/chorus-bio-modules-24.04/
+      - title: "Chorus - Full Software Inventory"
+        url: /sw_inventory/chorus-all-modules-24.04/
+      - title: "Gizmo - Bio Software Inventory"
+        url: /sw_inventory/bio-modules-18.04/
+      - title: "Gizmo - Full Software Inventory"
+        url: /sw_inventory/all-modules-18.04/
       - title: "R Modules"
         url: /r/
       - title: "Python Modules"
