Add Canto to the Inventory

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -15,6 +15,10 @@ docs:
         url: /sw_inventory/chorus-bio-modules-24.04/
       - title: "Chorus - Full Software Inventory"
         url: /sw_inventory/chorus-all-modules-24.04/
+      - title: "Canto - Bio Software Inventory"
+        url: /sw_inventory/skylake-bio-modules-24.04/
+      - title: "Canto - Full Software Inventory"
+        url: /sw_inventory/skylate-all-modules-24.04/
       - title: "Gizmo - Bio Software Inventory"
         url: /sw_inventory/gizmo-bio-modules-18.04/
       - title: "Gizmo - Full Software Inventory"
